--- a/src/App.css
+++ b/src/App.css
@@ -8,14 +8,27 @@
 }
 
 .App-header {
-  background-color: #222;
-  height: 150px;
   padding: 20px;
   color: white;
 }
 
 .App-intro {
   font-size: large;
+}
+
+.Navigation ul li a{
+	list-style-type: none;
+	text-decoration: none;
+	font-size: 1.5em;
+	font-weight: bold;
+	padding: 5px 15px;
+	color:#3d3d3d;
+}
+.Navigation ul{
+	padding: 0;
+}
+.Navigation ul li{
+	display: inline;
 }
 
 @keyframes App-logo-spin {
